--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,7 @@
 #index:
-#    path: /
+#    path: /index
 #    controller: App\Controller\DefaultController::index
+
+accueil:
+  path: /
+  controller: App\Controller\AccueilController::accueil
